# frappe-auth-bridge

./: .gitignore  pyproject.toml
.github/workflows/: pypi.yml
examples/: client_example.py  django_example.py  fastapi_example.py  flask_example.py  vanilla_example.py
frappe_auth_bridge/: __init__.py  cache.py  core.py  exceptions.py  models.py  security.py  session.py
frappe_auth_bridge/decorators/: __init__.py  auth.py
frappe_auth_bridge/middleware/: __init__.py  django.py  fastapi.py  flask.py
frappe_auth_bridge/utils/: __init__.py  async_client.py  logger.py
tests/: __init__.py  test_client.py  test_core.py  test_security.py  test_session.py
