[tool.poetry]
name = "frappe-auth-bridge"
version = "0.2.0"
description = "A secure Python authentication bridge that integrates with frappe-client to enable SSO across Django, Flask, FastAPI, and vanilla Python apps"
authors = ["Anthony"]
license = "MIT"
readme = "README.md"
packages = [{include = "frappe_auth_bridge"}]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
frappeclient = {git = "https://github.com/frappe/frappe-client.git"}
cryptography = "^42.0.0"
httpx = "^0.27.0"
cachetools = "^5.3.0"
pydantic = "^2.6.0"
redis = {version = "^5.0.0", optional = true}
django = {version = "^5.0.0", optional = true}
flask = {version = "^3.0.0", optional = true}
fastapi = {version = "^0.109.0", optional = true}
starlette = {version = "^0.36.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]
django = ["django"]
flask = ["flask"]
fastapi = ["fastapi", "starlette"]
all = ["redis", "django", "flask", "fastapi", "starlette"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
